--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
-.App {
-  position: relative;
-  background-color: rgba(0, 128, 0, 0.2);
-}
+/* .App {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background-image: url("./images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom left;
+  background-color: rgb(235,235,235);
+} */
