--- a/src/components/Goal/Goal.css
+++ b/src/components/Goal/Goal.css
@@ -1,7 +1,128 @@
+@keyframes colorChanging {
+  from {
+    background-color: var(--dark-blue-color);
+  }
+  to {
+    background-color: var(--see-through-dark-blue-color);
+  }
+  
+}
+
+
+.goal {
+  background-color: var(--see-through-white-color);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+
+  width: 900px;
+
+  padding-bottom: 20px;
+
+  position: fixed;
+  margin: auto;
+  left: 0;
+  right: 0;
+
+  z-index: 1;
+  
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.goal h1 {
+  margin: 0;
+  font-size: 30px;
+  color: var(--dark-blue-color);
+  text-shadow: 1px 1px 2px var(--white-color);
+}
+
 .goal_achieved h1 {
-  color: green;
+  color: var(--see-through-dark-blue-color);
+  text-shadow: none;
+  text-decoration: line-through;
+}
+
+.goal button {
+ border-radius: 5px;
+ line-height: 15px;
+ font-size: 14px;
+ font-weight: bold;
+
+ padding: 10px;
+ color: var(--white-color);
+ background-color: var(--dark-blue-color);
+ border: 2px solid var(--dark-blue-color);
+
+ cursor: pointer;
+ transition: all 0.2s ease-in;
+}
+
+.goal button:hover, 
+.goal_achieved button:hover  {
+  background-color: var(--light-grey-color);
+  color: var(--dark-blue-color);
+  border: 2px solid var(--dark-blue-color);
+  animation: none;
 }
 
 .goal_achieved button {
-  background-color: green;
+  animation: colorChanging 1s ease-in-out infinite alternate;
+}
+
+.goal_progressBar {
+  position: relative;
+  padding: 10px 0;
+}
+
+.line {
+  width: 100%;
+  height: 20px;
+  background-color: var(--light-grey-color);
+  color: var(--dark-blue-color);
+  text-align: end;
+  padding-right: 5px;
+  box-sizing: border-box;  
+  vertical-align: middle;
+  line-height: 20px;
+  font-weight: bold;
+
+}
+
+.line_green {
+  background-color: var(--dark-blue-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20%;
+  transform: translate(0, 50%);
+  transition: all 0.5s ease-in-out;
+}
+
+.dot {
+  background-color: var(--dark-blue-color);
+  border: 2px solid var(--white-color);
+  color: var(--white-color);
+  height: 40px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  border-radius: 10px;
+  transform: translate(50%, -25%);
+  transform-origin: center;
+  text-align: center;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0;
+  line-height: 40px;
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 40px;
+  padding: 0 5px;
+  min-width: 25px;
 }
