--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,12 +1,18 @@
-.section {
-  max-width: 800px;
+.list {
+  width: 900px;
   margin: 0 auto;
+  margin-top: 30px;
 
   /* border: 1px solid red; */
 }
 
-.list {
+.list ul {
   list-style: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+
+  display: grid;
+  row-gap: 20px;
+  grid-template-columns: repeat(auto-fit, 300px);
+  justify-content: space-around;
 }
