--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@
   --black-color: rgba(0, 0, 0, 1);
   --see-through-black-color: rgba(0, 0, 0, 0.2);
 
+
+  /* NEW SET */
+  --side-margin: 30px;
+
 }
 
 .app_wrapper {
