--- a/src/components/Goal/Goal.css
+++ b/src/components/Goal/Goal.css
@@ -10,11 +10,8 @@
 
 
 .goal {
-  background-color: var(--see-through-white-color);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-
-  width: 900px;
+  background-color: var(--white-color);
+  width: 100%;
 
   padding-bottom: 20px;
 
@@ -23,7 +20,9 @@
   left: 0;
   right: 0;
 
-  z-index: 1;
+  z-index: 10;
+
+  box-shadow: 0 5px 10px var(--see-through-black-color);
   
 }
 
@@ -101,28 +100,5 @@
   width: 20%;
   transform: translate(0, 50%);
   transition: all 0.5s ease-in-out;
-}
-
-.dot {
-  background-color: var(--dark-blue-color);
-  border: 2px solid var(--white-color);
-  color: var(--white-color);
-  height: 40px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  border-radius: 10px;
-  transform: translate(50%, -25%);
-  transform-origin: center;
-  text-align: center;
-  vertical-align: middle;
-  margin: 0;
-  padding: 0;
-  line-height: 40px;
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 40px;
-  padding: 0 5px;
-  min-width: 25px;
+  color: white;
 }
