--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,6 +1,9 @@
 .item {
+  width: 100%;
+  display: block;
   background-color: var(--see-through-white-color);
-  width: 200px;
+  width: 60%;
+
   margin: 0 auto;
   padding: 10px 10px 10px 40px;
   border-radius: 10px;
@@ -9,6 +12,9 @@
   border: 2px solid var(--white-color);
   justify-self: end;
   align-self: flex-end;
+  z-index: 5;
+
+  transition: all 0.6s ease-out;
 }
 
 .item:last-child {
@@ -150,4 +156,20 @@
 .item_done h3,
 .item_done p  {
   color: var(--see-through-black-color);
+}
+
+@keyframes fallingDown {
+  to {
+    opacity: 0.5;
+    transform: translateY(1000%) rotate(50deg);
+    transform-origin: top left;
+  }
+  
+}
+
+.item_deleteAnimation {
+  z-index: 1;
+  animation: fallingDown 1s cubic-bezier(.63,-0.28,.37,1.32);
+  
+  /* cubic-bezier(.37,-0.22,.48,1.47); */
 }
