--- a/src/components/Goal/Goal.css
+++ b/src/components/Goal/Goal.css
@@ -5,100 +5,107 @@
   to {
     background-color: var(--see-through-dark-blue-color);
   }
-  
 }
 
 
 .goal {
-  background-color: var(--white-color);
-  width: 100%;
-
-  padding-bottom: 20px;
-
   position: fixed;
-  margin: auto;
   left: 0;
   right: 0;
 
-  z-index: 10;
+  width: 100%;
 
-  box-shadow: 0 5px 10px var(--see-through-black-color);
-  
+  margin: auto;
+
+  background-color: var(--primary-color);
+  box-shadow: 0 5px 10px var(--primary-color);
+
+  color: var(--on-primary-color);
+
+  z-index: 10;  
 }
 
-.wrapper {
+.goal__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  margin: 0 var(--side-margin);
+  padding: 20px 0;
 }
 
-.goal h1 {
+.goal__title {
   margin: 0;
   font-size: 30px;
-  color: var(--dark-blue-color);
-  text-shadow: 1px 1px 2px var(--white-color);
+  line-height: 30px;
+  color: inherit;
 }
 
-.goal_achieved h1 {
-  color: var(--see-through-dark-blue-color);
+.goal_achieved .goal__title {
+  color: var(--accent-color);
   text-shadow: none;
   text-decoration: line-through;
 }
 
-.goal button {
- border-radius: 5px;
- line-height: 15px;
- font-size: 14px;
- font-weight: bold;
+.goal__btn {
+  padding: 10px;
+  
+  background-color: var(--primary-color);
+  border: 1px solid var(--on-primary-color);
+  border-radius: 5px;
 
- padding: 10px;
- color: var(--white-color);
- background-color: var(--dark-blue-color);
- border: 2px solid var(--dark-blue-color);
+  line-height: 15px;
+  font-size: 14px;
+  font-weight: bold;
 
- cursor: pointer;
- transition: all 0.2s ease-in;
+  color: var(--on-primary-color);
+
+  cursor: pointer;
+  transition: all 0.2s ease-in;
 }
 
-.goal button:hover, 
-.goal_achieved button:hover  {
-  background-color: var(--light-grey-color);
-  color: var(--dark-blue-color);
-  border: 2px solid var(--dark-blue-color);
+.goal__btn:hover, 
+.goal__btn button:hover  {
+  border-color: var(--accent-color);
+  color: var(--accent-color);
   animation: none;
 }
 
-.goal_achieved button {
+.goal_achieved .goal__btn {
   animation: colorChanging 1s ease-in-out infinite alternate;
 }
 
 .goal_progressBar {
   position: relative;
-  padding: 10px 0;
+  box-sizing: border-box;  
+
 }
 
 .line {
   width: 100%;
   height: 20px;
-  background-color: var(--light-grey-color);
-  color: var(--dark-blue-color);
-  text-align: end;
-  padding-right: 5px;
+  padding: 0 5px;
+
+  background-color: var(--secondary-color);
   box-sizing: border-box;  
-  vertical-align: middle;
+  
   line-height: 20px;
   font-weight: bold;
-
+  text-align: end;
+  vertical-align: middle;
+  color: var(--on-secondary-color);
 }
 
-.line_green {
-  background-color: var(--dark-blue-color);
+.line_progress {
   position: absolute;
   top: 0;
   left: 0;
+
   width: 20%;
-  transform: translate(0, 50%);
+  background-color: var(--accent-color);
+  box-sizing: border-box; 
+
+  line-height: 20px;
+  color: var(--on-accent-color);
+
   transition: all 0.5s ease-in-out;
-  color: white;
 }
