--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,7 +1,7 @@
 .formSection{
   position: relative;
 
-  width: calc(100% - 2 * var(--side-margin));
+  width: 100%;
   margin: 0 auto;
   padding: 10px 20px;
 
