--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,6 +1,5 @@
 @keyframes fallingDown {
   to {
-    opacity: 0.5;
     transform: translateY(1000%) rotate(50deg);
     transform-origin: top left;
   }
@@ -66,13 +65,18 @@
   margin-right: 5px;
   padding: 0;
 
-  border: 1px solid var(--secondary-color);
+  border: 1px solid var(--on-primary-color);
   border-radius: 5px;
+
+  background-color: var(--primary-color);
 
   font-size: 22px;
   line-height: 22px;
   text-align: center;
+  color: var(--on-primary-color);
 
+  opacity: 0.5;
+  transition: all 0.2s ease-in;
   cursor: pointer;
 }
 
@@ -80,20 +84,13 @@
   margin-right: 0;
 }
 
-.item__btn_done {
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
-  color: var(--on-accent-color);
+.item__btn:hover {
+  opacity: 1;
 }
 
 /* галочка - \2714 */
 .item__btn_done::before {
   content: "\2714";
-}
-
-.item__btn_delete {
-  background-color: var(--primary-color);
-  color: var(--on-primary-color);
 }
 
 /* крестик - \2716 */
@@ -103,7 +100,7 @@
 
 .item_important {
   border-color:  var(--accent-color);
-  box-shadow: 0 0 3px var(--accent-color), 0 0 2px white;
+  /* box-shadow: 0 0 3px var(--accent-color), 0 0 2px white; */
 }
 
 .item_important .item__title, 
@@ -111,13 +108,17 @@
   color: var(--accent-color);
 }
 
+.item_done {
+  opacity: 0.3;
+  z-index: 1;
+}
+
 .item_done .item__title, 
 .item_done .item__price {
-  opacity: 0.5;
   text-decoration: line-through;
 }
 
 .item_deleteAnimation {
-  z-index: 1;
+  z-index: 3;
   animation: fallingDown 1s cubic-bezier(.63,-0.28,.37,1.32);
 }
